fix: elements hidden behind header

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -26,6 +26,7 @@ header a {
 section {
   height: 100vh;
   margin: 0 auto;
+  padding-top: 5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
